-fixed layout problem in chrome 19 -added getUserMedia compatibility for chrome versions < 20

--- a/demos/facekat/styles/style.css
+++ b/demos/facekat/styles/style.css
@@ -45,6 +45,7 @@ a {
 	cursor:pointer;
 	padding: 0.5em;
 	margin: 0 auto;
+	width: 8em;
 	/* initial start button style */
 	display: none;
 }
